Installed SwiftyJSON, Alamofire using cocoapods

--- a/Weather App/View/Base.lproj/Main.storyboard
+++ b/Weather App/View/Base.lproj/Main.storyboard
@@ -42,10 +42,10 @@
             </objects>
             <point key="canvasLocation" x="-338.39999999999998" y="131.78410794602701"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="L3j-PC-fYl">
             <objects>
-                <viewController id="77S-k2-pdE" sceneMemberID="viewController">
+                <viewController id="77S-k2-pdE" customClass="SettingsViewController" customModule="Weather_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GWQ-CY-8kK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
